--- a/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/2.data-storage/4.compression-and-encoding.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/2.data-storage/4.compression-and-encoding.md
@@ -80,7 +80,8 @@ MySQL 模式中 `row_format` 的选项取值如下表所示。
 | compact    | flat                                                             |
 | dynamic    | encoding                                                         |
 | compressed | encoding                                                         |
-| condensed  | selective encoding  (encoding 的子集，只使用查询更友好的编码方式) |
+| condensed  | selective encoding，encoding 的子集，selective encoding 只支持 RAW、DICT、CONST 编码，并仅对数据进行 byte packing|
+| default    | 等价 `dynamic`                                                   |
 
 Oracle 模式中的取值及其说明如下表所示。
 
