--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md
@@ -4,7 +4,8 @@
 
 ## 分区介绍
 
-OceanBase 数据库可以把普通的表的数据按照一定的规则划分到不同的区块内，同一区块的数据物理上存储在一起。这种划分区块的表叫做分区表，其中的每一个区块称作分区。
+OceanBase 数据库可以把普通的表的数据按照一定的规则划分到不同的区块内，同一区块的数据物理上存储在一起。这种划分区块的表叫做分区表，其中的每一个区块称作分区。OceanBase 数据库的 MySQL 模式中，单个表最多支持创建的分区个数为 8192 个。
+
 
 如下图所示，一张表被划分成了 5 个分区，分布在 2 台机器上：
 
