--- a/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -62,7 +62,6 @@
 |   类型    |   最大限制    |
 |---------|-----------|
 | 索引单个列长度 | 262143 字节 |
-| 主键单个列长度 | 262143 字节 |
 
 ## 字符串类型限制
 
@@ -70,12 +69,12 @@
 
   |   **类型**    | **最大长度** |
   |-------------|----------|
-  | `CHAR`      | 255 字节   |
-  | `VARCHAR`   | 65535 字节 |
-  | `BINARY`    | 255 字节   |
-  | `VARBINARY` | 65535 字节 |
-  | `BLOB`      | 65535 字节 |
-  | `TEXT`      | 65535 字节 |
+  | `CHAR`      | 256 字节   |
+  | `VARCHAR`   | 1048576 字节 |
+  | `BINARY`    | 256 字节   |
+  | `VARBINARY` | 1048576 字节 |
+  | `BLOB`      | 536870911 字节 |
+  | `TEXT`      | 536870911 字节 |
 
 * Oracle 模式
 
