--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
@@ -31,10 +31,26 @@
 
       ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>如果不指定租户，执行 <code>ALTER SYSTEM MINOR FREEZE</code> 语句，则表示对本租户进行转储。</p>
-  </main>
+      <main id="notice" type='explain'>
+       <h4>说明</h4>
+       <p>如果不指定租户，执行 <code>ALTER SYSTEM MINOR FREEZE</code> 语句，则表示对本租户进行转储。</p>
+      </main>
+
+   * Zone 级别的转储
+
+      可以对指定的一个或多个 Zone 进行转储。
+      
+      SQL 语句如下：
+
+      ```sql
+      obclient> ALTER SYSTEM MINOR FREEZE ZONE [=] zone_name [, zone_name ...];
+      ```
+
+      示例：
+
+      ```sql
+      obclient> ALTER SYSTEM MINOR FREEZE ZONE = zone1;
+      ```
 
    * Server 级别的转储
 
