400use部署文档优化2修订

--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/3.prepare-the-installation-package.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/3.prepare-the-installation-package.md
@@ -11,9 +11,9 @@
        <th>安装包说明</th>
    </tr>
    <tr>
-       <td>OAT RPM 包</td>
+       <td>OAT 镜像包</td>
        <td>用于安装和管理 OCP、OMS 和 ODC 等。</td>
-       <td>请联系技术支持获取最新 OAT 安装包。</td>
+       <td>请联系技术支持获取最新 OAT 镜像包。</td>
    </tr>
    <tr>
        <td rowspan>OCP docker image</td>
