--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/4.upload-the-installation-package.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/4.upload-the-installation-package.md
@@ -8,19 +8,13 @@
 
 有关各安装包的具体版本，请联系技术支持获取您所需的版本。
 
-* 对于 OCP 部署，您需要向安装 OAT 的服务器上传三个镜像，包括 OCP、OCP MetaDB 的 OBProxy、OCP MetaDB 的 OceanBase 镜像。
+* 对于 OCP 部署，您需要向安装 OAT 的服务器上传两个镜像，包括 OCP docker image 和 OBServer docker image。
 
   其中 `oat_server` 表示部署 OAT 的服务器的 IP 地址。
 
-  > **说明**
-  >
-  > 如果您希望在三节点 OCP 部署中使用 DNS 模式，您还需要准备 DNS 安装包。
-
   ```shell
   [root@hostname /]# scp ./ocp.tar <oat_server>:/oat/data_dir/images/ocp/ocp.tar
-  [root@hostname /]# scp ./obproxy.tar <oat_server>:/oat/data_dir/images/obproxy/obproxy.tar
   [root@hostname /]# scp ./observer.tar <oat_server>:/oat/data_dir/images/observer/observer.tar
-  [root@hostname /]# scp ./dns.tar <oat_server>:/oat/data_dir/images/dns/dns.tar
   ```
 
 * 对于 ODC 部署，您需要向安装 OAT 的服务器中上传 ODC 的镜像。
