补充提交信息

--- a/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/5.memory-management/3.memory-related-internal-tables.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/5.memory-management/3.memory-related-internal-tables.md
@@ -1,10 +1,9 @@
-# 内存相关内部表
+# 内存相关的视图
 
-OceanBase 数据库支持通过内部表来查看内存的使用情况。
+OceanBase 数据库支持通过视图来查看内存的使用情况。
 
-|                  视图                  | 描述 |   |
-|--------------------------------------|----|---|
-| __all_virtual_tenant_ctx_memory_info | context 级别的统计信息（context 是面向开发者的概念），它是 2M 粒度的统计。 ||
-| __all_virtual_memory_info            | OBServer 内存标签的统计信息。 ||
-| __all_virtual_tenant_memstore_info   | memstore 统计信息。 ||
-| __all_virtual_kvcache_info           | kvcache 统计信息。 ||
+|                  视图                  | 描述                                                                | 
+|---------------------------------------|----------------------------------------------------------------------|
+| GV$OB_MEMORY                         | OBServer 内存标签的统计信息。                                           |
+| GV$OB_MEMSTORE                       | Memstore 统计信息。                                                    |
+| GV$OB_KVCACHE                        | Kvcache 统计信息。                                                     |
