--- a/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/5.memory-management/5.memory-problem-diagnosis.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/5.memory-management/5.memory-problem-diagnosis.md
@@ -2,9 +2,9 @@
 
 ## 内存泄漏动态诊断
 
-`__all_virtual_memory_info` 显示了整个 OBServer 通过 ObMalloc 分配内存的情况，每一块内存都有一个标签叫做 label 或者 mod_id，通过查看 mod 的统计信息，可以分析系统内存的使用情况，并初步确认疑似存在内存泄露的模块。
+`GV$OB_MEMORY` 视图显示了整个 OBServer 通过 ObMalloc 分配内存的情况，每一块内存都有一个标签叫做 label 或者 mod_id，通过查看 mod 的统计信息，可以分析系统内存的使用情况，并初步确认疑似存在内存泄露的模块。
 
-为了便于排查内存泄露问题，OceanBase 数据库实现了内存泄漏动态诊断机制，其工作原理是在每一次跟踪模块进行内存分配的时候，记录其申请内存的地址及相应的调用栈；在所申请内存被释放的时候，将该条记录清空。这样正常申请、释放内存的调用栈会被很快清空，而出现内存泄露的调用栈的记录将一直存在，最后我们按照调用栈进行分组，将每个不同的调用栈当前存在的申请记录进行累加，显示在 `__all_mem_leak_checker_info` 中。换言之，累计次数多的调用栈很可能出现了内存泄露（当然也有可能是由于各种缓存而造成的，这个需要具体问题具体分析）。
+为了便于排查内存泄露问题，OceanBase 数据库实现了内存泄漏动态诊断机制，其工作原理是在每一次跟踪模块进行内存分配的时候，记录其申请内存的地址及相应的调用栈；在所申请内存被释放的时候，将该条记录清空。这样正常申请、释放内存的调用栈会被很快清空，而出现内存泄露的调用栈的记录将一直存在，最后我们按照调用栈进行分组，将每个不同的调用栈当前存在的申请记录进行累加，显示在 `__all_virtual_mem_leak_checker_info` 中。换言之，累计次数多的调用栈很可能出现了内存泄露（当然也有可能是由于各种缓存而造成的，这个需要具体问题具体分析）。
 
 ### 打开 memory_leak
 
@@ -12,7 +12,7 @@
 obclient> alter system set leak_mod_to_check='OB_COMMON_ARRAY';
 ```
 
-像这样，就指定了跟踪模块为 OB_COMMON_ARRAY，设置完毕后就可以开始监控 `__all_mem_leak_checker_info` 表的信息，查看可能出问题的调用栈。
+像这样，就指定了跟踪模块为 OB_COMMON_ARRAY，设置完毕后就可以开始监控 `__all_virtual_mem_leak_checker_info` 表的信息，查看可能出问题的调用栈。
 
 ### 查询
 
@@ -133,7 +133,7 @@ obclient> alter system set leak_mod_to_check='';
 malloc 等 glibc 内存申请会被透传到 OceanBase 数据库的内存管理接口，mod_id 为 glibc_malloc，可以通过以下方式查看：
 
 ```sql
-obclient> select *from __all_virtual_memory_info where mod_name = 'glibc_malloc' and hold > 0;
+obclient> select *from GV$OB_MEMORY where mod_name = 'glibc_malloc' and hold > 0;
 +-----------+----------------+----------+--------+--------------+----------+----------+--------+--------------+------+-----------+-----------+-------+-------------+------------+
 | tenant_id | svr_ip         | svr_port | ctx_id | label        | ctx_name | mod_type | mod_id | mod_name     | zone | hold      | used      | count | alloc_count | free_count |
 +-----------+----------------+----------+--------+--------------+----------+----------+--------+--------------+------+-----------+-----------+-------+-------------+------------+
