400use部署文档优化2修订3

--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/3.prepare-the-installation-package.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/3.prepare-the-installation-package.md
@@ -50,4 +50,4 @@
 
 > **说明**
 >
-> 各组件安装包下载地址在 OceanBase 官方网站左上角单击 **资源** 下的 **下载中心** 按钮进入下载页面。
+> 各组件安装包下载地址在 OceanBase 官方网站左上角单击 **资源** 下的 [下载中心](https://www.oceanbase.com/softwarecenter) 按钮进入下载页面。
