--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/2.create-tenant.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/2.create-tenant.md
@@ -50,7 +50,7 @@
 
    ![3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/13%E5%89%AF%E6%9C%AC%E8%AE%BE%E7%BD%AE.png)
 
-   当所选集群为 V4.0 及以上版本时，不支持按 Zone 级别单独设置 unit 数量，所有 Zone 的 Unit 数量需保持一致（默认为 1）。
+   当所选集群为 V4.0.0 及以上版本时，不支持按 Zone 级别单独设置 unit 数量，所有 Zone 的 Unit 数量需保持一致（默认为 1）。
 
    默认系统会根据所选集群的 Zone 信息显示可配置的 Zone 列表，对于无需做副本分布的 Zone，可以单击后面的删除按钮删除该 Zone 条目。需要配置的 Zone 信息及其相关说明如下表所示。
 
@@ -58,13 +58,13 @@
    |---------------|---------------|
    | 副本类型       | 有以下选项：<ul><li>全能型副本</li><li>只读型副本</li><li>日志型副本</li></ul>请选择多个全功能副本类型，确保全功能副本类型占多数派。|
    | Unit 规格      | OCP 内置了一套 Unit 规格，请参考 **OCP 资源单元规格列表** 进行选择，或者您也可以在列表下方单击 **新增规格** 按钮新增自定义规格。|
-   | Unit 数量      | 指定该 Zone下的 Unit 数量。Unit 数量不能超过该 Zone下 Server 个数。 |
-   | Zone 优先级排序 | Zone的优先级排序。该优先级顺序影响 sys 租户的 Primary Zone 的优先级顺序。 左边的列表框中显示了当前集群的所有 Zone。 您可以在左侧列表框中选择一个或多个 Zone 添加到右侧的列表框中，默认先选择的 Zone 的优先级高于后选择的 Zone，一次选中的多个 Zone 的优先级相同。 移动到右侧的列表框中后，您也可以在右侧的列表框中通过拖拽调整顺序，列表框上方的 Zone 的优先级高于下方的 Zone。|
+   | Unit 数量      | 指定该 Zone 下的 Unit 数量。Unit 数量不能超过该 Zone 下 Server 个数。 |
+   | Zone 优先级排序 | Zone 的优先级排序。该优先级顺序影响 sys 租户的 Primary Zone 的优先级顺序。 左边的列表框中显示了当前集群的所有 Zone。 您可以在左侧列表框中选择一个或多个 Zone 添加到右侧的列表框中，默认先选择的 Zone 的优先级高于后选择的 Zone，一次选中的多个 Zone 的优先级相同。 移动到右侧的列表框中后，您也可以在右侧的列表框中通过拖拽调整顺序，列表框上方的 Zone 的优先级高于下方的 Zone。|
 
       > **注意**
       >
       >* 如果设置了 Primary Zone，则 Primary Zone 所在的 Region 必须至少有两个 Zone，并且至少有两个全能型（F）副本（一个 Zone 一个副本）。
-      >* 有关 Primary Zone 的详细信息，请参见 [Primary Zone](../../../../4.system-architecture/5.distributed-database-objects/3.data-partitions-and-replicas/4.data-balancing/2.leader-equalization/2.primary-zone.md)
+      >* 有关 Primary Zone 的详细信息，请参见 [Primary Zone](../../../../4.system-architecture/5.distributed-database-objects/3.data-partitions-and-replicas/4.data-balancing/2.leader-equalization/2.primary-zone.md)。
 
 6. 在 **新建租户** 页面，进行 **安全设置**。
 
