--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/3.verify-after-deployment.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/3.verify-after-deployment.md
@@ -30,3 +30,7 @@ obclient [(none)]>
 > * -p：提供账户密码，为了安全可以不提供，改为在后面提示符下输入，密码文本不可见。
 > * -c：表示在 MySQL 运行环境中不要忽略注释。
 > * -Ne：表示在 MySQL 连接数据库时执行 SQL 语句。
+
+## 相关文档
+
+有关连接数据库的详细信息，请参见 [连接方式概述](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
