--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
@@ -53,9 +53,7 @@
 
 3. 挂载 OAT 目录。
 
-   在服务器创建 `/data_dir` 目录用来保存 OAT 的持久化数据。在 `/data_dir` 目录被挂载到 OAT 容器后，OAT 会自动创建 `/data_dir/logs`、`/data_dir/images` 和 `/data_dir/db` 目录，分别用于存放 OAT 的系统日志、组件和产品的 Docker 镜像以及 OAT 的数据库文件。
-
-   示例如下：
+   在服务器创建 `/data_dir` 目录用来保存 OAT 的持久化数据。在 `/data_dir` 目录被挂载到 OAT 容器后，OAT 会自动创建 `/data_dir/logs`、`/data_dir/images` 和 `/data_dir/db` 目录，分别用于存放 OAT 的系统日志、组件和产品的 Docker 镜像以及 OAT 的数据库文件。示例如下：
 
    ```shell
    [root@xxx /]
@@ -72,7 +70,7 @@
 
    ```bash
    [root@xxx /home/admin/rpm]
-   $docker load -i oat_4.0.0_20221202_x86.tar
+   #docker load -i oat_4.0.0_20221202_x86.tar
    06f6bfff6616: Loading layer [==================================================>]  230.8MB/230.8MB
    14c0710ff1a5: Loading layer [==================================================>]  418.5MB/418.5MB
    7a259a6e1f07: Loading layer [==================================================>]   5.12kB/5.12kB
