--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/5.add-server.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/5.add-server.md
@@ -58,6 +58,6 @@
 
 ## 更多信息
 
-服务器添加成功后，您可以在服务器列表中看到新添加的服务器。此时机器状态为 初始化中。您可以在在 服务器管理 页面，找到您添加的服务器，在对应的 操作 列中，点击 查看任务，查看任务进度。如果服务器太多，您可以在页面上方通过 IP 搜索查询。
+服务器添加成功后，您可以在服务器列表中看到新添加的服务器。此时机器状态为 **初始化中**。您可以在在 **服务器管理** 页面，找到您添加的服务器，在对应的 **操作** 列中，点击 **查看任务**，查看任务进度。如果服务器太多，您可以在页面上方通过 IP 搜索查询。
 
 如果您遇到了报错的子任务，且该子任务不影响业务，您可以查看日志信息后，手动将子任务设置为成功。
