更新 7-4 修改文件名导致的 链接失效

--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/1.create-a-tablegroup-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/1.create-a-tablegroup-of-oracle-mode.md
@@ -79,7 +79,7 @@ Create Tablegroup: CREATE TABLEGROUP IF NOT EXISTS `tgn`  BINDING = FALSE
 1 row in set
 ```
 
-表组创建后，可以使用 `ALTER TABLE table_name SET TABLEGROUP tablegroup_name;` 语句将表加入到表组中。也可以先创建表组，再使用 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句创建与表组分区方式相同的表，并通过 `TABLEGROUP` 属性指定表所属的表组。管理非分区表组的详细操作请参见 [管理表组](暂不支持)。
+表组创建后，可以使用 `ALTER TABLE table_name SET TABLEGROUP tablegroup_name;` 语句将表加入到表组中。也可以先创建表组，再使用 [CREATE TABLE](../../../7.reference/4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句创建与表组分区方式相同的表，并通过 `TABLEGROUP` 属性指定表所属的表组。管理非分区表组的详细操作请参见 [管理表组](暂不支持)。
 
 例如，本示例中，如果先创建了表组 `tgn`，则可以使用以下语句创建表并指定表组，语句如下。
 
