--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md
@@ -17,7 +17,7 @@
 
 ## 替换表数据
 
-请使用 [MERGE INTO](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/3.merge-of-oracle-mode.md) 语句替换目标表中的一条或多条记录。
+请使用 [MERGE INTO](../../../7.reference/4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/3.merge-of-oracle-mode.md) 语句替换目标表中的一条或多条记录。
 
 `MERGE INTO` 语句的语法格式如下：
 
