--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/12.terminate-a-tenant-session.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/12.terminate-a-tenant-session.md
@@ -40,4 +40,4 @@ obclient> KILL CONNECTION session_id;
 
 其中，`session_id` 可通过 `SHOW PROCESSLIST` 语句获取。
 
-更多 `KILL` 语句的使用和说明，请参见 [KILL（MySQL 模式）](../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/38.kill-of-mysql-mode.md) 和 [KILL（Oracle 模式）](../../../4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/8.kill-of-oracle-mode.md)。
+更多 `KILL` 语句的使用和说明，请参见 [KILL（MySQL 模式）](../../../4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/38.kill-of-mysql-mode.md) 和 [KILL（Oracle 模式）](../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/8.kill-of-oracle-mode.md)。
