--- a/zh-CN/7.reference/5.system-reference/3.system-variable-of-oracle-mode/62.ob_compatibility_mode-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/3.system-variable-of-oracle-mode/62.ob_compatibility_mode-of-oracle-mode.md
@@ -17,4 +17,4 @@
 CREATE TENANT IF NOT EXISTS t1 zone_list = ('zone1'), primary_zone = 'zone1', resource_pool_list = ('pool1') SET ob_compatibility_mode = 'mysql',lower_case_table_names = 0;
 ```
 
-有关 `CREATE TENANT` 语句的详细介绍，请参见 [CREATE TENANT](../../4.development-guide-refactoring/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
+有关 `CREATE TENANT` 语句的详细介绍，请参见 [CREATE TENANT](../../4.development-reference1.sql-syntax/1.system-tenants/8.create-tenant.md)。
