--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
@@ -26,7 +26,7 @@
 
 ## 创建数据库
 
-请使用 [CREATE DATABASE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/11.create-database-of-mysql-mode.md) 语句创建数据库。然后根据数据库创建建议，参考本文的示例来完成数据库的创建。
+请使用 [CREATE DATABASE](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/11.create-database-of-mysql-mode.md) 语句创建数据库。然后根据数据库创建建议，参考本文的示例来完成数据库的创建。
 
 ## 数据库创建建议
 
@@ -37,7 +37,7 @@
 * 应避免使用保留关键字作为数据库名，OceanBase 数据库 MySQL 模式的保留关键字请参见 [预留关键字](../../../7.reference/5.system-reference/8.reserved-keyword-of-mysql-mode.md)。
 
 * 为了适应业务的长远发展，数据库的字符集编码需要能够存储绝大多数的字符，建议创建数据库时使用 `UTF8` 字符集编码。
-  数据库支持的字符集编码相关内容请参见 [数据库级字符集](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/4.specify-character-set-and-collation-of-mysql-mode.md)。
+  数据库支持的字符集编码相关内容请参见 [数据库级字符集](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/4.specify-character-set-and-collation-of-mysql-mode.md)。
 
 ## 示例
 
