--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/2.update-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/2.update-data-of-mysql-mode.md
@@ -17,7 +17,7 @@
 
 ## 使用 UPDATE 语句更新数据
 
-通常使用 [UPDATE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.update-of-mysql-mode.md) 语句来更新表数据。
+通常使用 [UPDATE](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.update-of-mysql-mode.md) 语句来更新表数据。
 
 `UPDATE` 语句的语法格式如下：
 
