--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
@@ -18,7 +18,7 @@
 
 ## 使用 INSERT 语句插入数据
 
-请使用 [INSERT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md) 语句，再参考下面的建议，向表中插入数据。
+请使用 [INSERT](../../../7.reference/4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md) 语句，再参考下面的建议，向表中插入数据。
 
 `INSERT` 语句语法格式如下：
 
