--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/3.define-an-auto-increment-column-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/3.define-an-auto-increment-column-of-mysql-mode.md
@@ -164,7 +164,7 @@ obclient> ALTER TABLE table_name MODIFY column_name data_type AUTO_INCREMENT;
     <p>修改为自增列时，可以同时修改该列的数据类型，但需要确保修改后的数据类型是允许自增的数据类型。</p>
   </main>
 
-  关于数据类型的更多介绍，请参见 [数据类型概述](../../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md)。
+  关于数据类型的更多介绍，请参见 [数据类型概述](../../../../4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md)。
   
 示例：
 
