--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase.md/3.experience-parallelly-importing-and-data-compression.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase.md/3.experience-parallelly-importing-and-data-compression.md
@@ -169,7 +169,7 @@ GRANT FILE ON *.* to username;
 load data /*+ parallel(16) */ infile '/home/soft/t_f1.csv' into table t_f1 fields terminated by '\|' lines terminated by '\n';
 ```
 
-可以看到，开启并行导入后，10 GB 数据耗时大约 4 分钟。 本文中租户的 CPU 配置为 16 GB，可以根据您的具体配置设置合适的并行度，配置越高导入速度越快。
+可以看到，开启并行导入后，10 GB 数据耗时大约 4 分钟。 本文中租户的 CPU 并行度配置为 16，可以根据您的具体配置设置合适的并行度，配置越高导入速度越快。
 
 导入后，进入数据库对该表记录条数及占用空间大小进行查看。
 
