--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/3.create-a-index-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/2.design-a-database-object-of-oracle-mode/3.create-a-index-of-oracle-mode.md
@@ -57,7 +57,7 @@
 
 如果需要索引列上不存在重复的值，可以创建唯一索引。
 
-您可以使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句，再参考以下的要求为已存在的表创建唯一索引。
+您可以使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句，再参考以下的要求为已存在的表创建唯一索引。
 
 以下是创建唯一索引需要遵循的要求：
 
@@ -88,7 +88,7 @@ obclient [SYS]> SELECT INDEX_NAME,INDEX_TYPE,TABLE_OWNER,TABLE_NAME,UNIQUENESS F
 
 ## 创建非唯一索引
 
-您可以使用 [CREATE INDEX](../../../7.reference/4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句，再参考以下的要求为已存在的表创建非唯一索引。
+您可以使用 [CREATE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句，再参考以下的要求为已存在的表创建非唯一索引。
 
 以下是创建非唯一索引需要遵循的要求：
 
@@ -112,9 +112,9 @@ Query OK, 0 rows affected
 
 如果要使用局部唯一索引去对数据唯一性做约束，那么局部唯一索引中必须包含表分区键。
 
-请使用 [CREATE INDEX](../../../7.reference/4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句结合 `LOCAL` 关键字，再参考以下要求为已存在的表创建局部索引。
+请使用 [CREATE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句结合 `LOCAL` 关键字，再参考以下要求为已存在的表创建局部索引。
 
-请使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句结合 `LOCAL` 关键字，再参考以下的要求为已存在的表创建局部唯一索引。
+请使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句结合 `LOCAL` 关键字，再参考以下的要求为已存在的表创建局部唯一索引。
 
 以下是创建局部索引需要遵循的要求：
 
@@ -164,9 +164,9 @@ Query OK, 0 rows affected
 
 创建全局索引的关键字是 `GLOBAL`。与局部索引相比，全局索引最大的特点是全局索引的分区规则跟表分区是相互独立的，全局索引允许指定自己的分区规则和分区个数，不一定需要跟表分区规则保持一致。
 
-请使用 [CREATE INDEX](../../../7.reference/4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句结合 `GLOBAL` 关键字，再参考以下要求为已存在的表创建全局索引。
+请使用 [CREATE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句结合 `GLOBAL` 关键字，再参考以下要求为已存在的表创建全局索引。
 
-请使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句结合 `GLOBAL` 关键字，再参考以下要求为已存在的表创建全局唯一索引。
+请使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 语句结合 `GLOBAL` 关键字，再参考以下要求为已存在的表创建全局唯一索引。
 
 以下是创建全局索引需要遵循的要求：
 
