--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/4.sort-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/4.sort-query-of-oracle-mode.md
@@ -81,7 +81,7 @@ obclient> SELECT empname, deptno,sal, HIREDATE FROM emp WHERE sal>=1000 ORDER BY
 
 可以使用 `NLSSORT` 函数进行中文的拼音排序，笔画排序等。
 
-有关 `NLSSORT` 函数的详细信息，请参见 [NLSSORT](../../../7.reference/4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/2.string-functions-that-return-a-string-of-oracle-mode/8.nlssort-of-oracle-mode.md)。
+有关 `NLSSORT` 函数的详细信息，请参见 [NLSSORT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/2.string-functions-that-return-a-string-of-oracle-mode/8.nlssort-of-oracle-mode.md)。
 
 ### 示例
 
