--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
@@ -15,7 +15,7 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
     DESTINATION [=] ip_port;
 ```
 
-资源单元迁移语法详细信息，请参见 [MIGRATE UNIT](../7.reference/4.development-reference1.sql-syntax/1.system-tenants/2.alter-system/14.UNIT.md)。
+资源单元迁移语法详细信息，请参见 [MIGRATE UNIT](../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.UNIT.md)。
 
 参数解释：
 
@@ -26,7 +26,7 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
 
 >**说明**
 >
->可以通过 `ALTER SYSTEM CANCEL MIGRATE UNIT` 语句取消资源单元迁移。取消资源单元迁移详细信息，请参见 [CANCEL MIGRATE UNIT](../7.reference/4.development-reference1.sql-syntax/1.system-tenants/2.alter-system/4.cancel-migrate-unit.md)。
+>可以通过 `ALTER SYSTEM CANCEL MIGRATE UNIT` 语句取消资源单元迁移。取消资源单元迁移详细信息，请参见 [CANCEL MIGRATE UNIT](../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.cancel-migrate-unit.md)。
 
 ## 示例
 
