--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/2.displays-the-status-of-a-session.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/2.displays-the-status-of-a-session.md
@@ -18,7 +18,7 @@ SHOW PROXYSESSION ATTRIBUTE [id [like 'xxx']]
 
 * `id` 既可以是 `cs_id`，也可以是 `CONNECTION_ID`，显示结果相同。
 
-* `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`CONNECTION_ID` 为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。有关 `CONNECTION_ID` 的详细介绍，请参见 [CONNECTION_ID](../../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/6.information-functions-of-mysql-mode/5.connection-id-of-mysql-mode.md)。
+* `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`CONNECTION_ID` 为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。有关 `CONNECTION_ID` 的详细介绍，请参见 [CONNECTION_ID](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/6.information-functions-of-mysql-mode/5.connection-id-of-mysql-mode.md)。
 
 * like 模糊匹配，支持 '%' 和 '_' 。
 
