--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.manage-tenants/2.modify-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.manage-tenants/2.modify-tenant.md
@@ -63,4 +63,4 @@ opt_global_sys_vars_set:
   obclient> ALTER TENANT tenant1 locality="F@B_1,F@B_2,F@B_3,F@B_4"
   ```
 
-更多 `ALTER TENANT` 语句的信息请参见 [ALTER TENANT](../../../../4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md)。
+更多 `ALTER TENANT` 语句的信息请参见 [ALTER TENANT](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md)。
