--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/2.create-role-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/2.create-role-of-oracle-mode.md
@@ -39,4 +39,4 @@ CREATE ROLE role_name
   Query OK, 0 rows affected
   ```
 
-  更多 `CREATE ROLE` 语句的信息请参见 [CREATE ROLE](../../../../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/21.create-role-of-oracle-mode.md)。
+  更多 `CREATE ROLE` 语句的信息请参见 [CREATE ROLE](../../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/21.create-role-of-oracle-mode.md)。
