--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/7.lock-and-unlock-users-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/7.lock-and-unlock-users-of-mysql-mode.md
@@ -57,4 +57,4 @@ obclient> SELECT user_name,is_locked FROM oceanbase.__all_user WHERE user_name='
 1 row in set
 ```
 
-更多 `ALTER USER` 语句的信息请参见 [ALTER USER](../../../../../4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/8.alter-user-of-mysql-mode.md)。
+更多 `ALTER USER` 语句的信息请参见 [ALTER USER](../../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/8.alter-user-of-mysql-mode.md)。
