--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/4.delete-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/4.delete-a-database-of-mysql-mode.md
@@ -14,4 +14,4 @@
 obclient> DROP DATABASE my_db;    
 ```
 
-更多 `DROP DATABASE` 语句相关的语法说明请参见 [DROP DATABASE](../../../../4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/23.drop-database-of-mysql-mode.md)。
+更多 `DROP DATABASE` 语句相关的语法说明请参见 [DROP DATABASE](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/23.drop-database-of-mysql-mode.md)。
