--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md
@@ -273,7 +273,7 @@ obclient> SELECT * FROM USER_CONS_COLUMNS WHERE table_name='TBL3';
   obclient> ALTER TABLE table_name MODIFY c1 NULL;
   ```
 
-更多管理约束的语法及详细介绍请参见 [ALTER TABLE](../../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md)。
+更多管理约束的语法及详细介绍请参见 [ALTER TABLE](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md)。
 
 ## 关于时间列的默认时间设置
 
