--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode.md
@@ -157,7 +157,7 @@ select_expr_list:
   obclient> SELECT * FROM tbl1@my_link;
   ```
 
-更多 DBLink 相关的查询语句，请参见 [SIMPLE SELECT](../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
+更多 DBLink 相关的查询语句，请参见 [SIMPLE SELECT](../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
 
 ## 删除 DBLink
 
