--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql.md/2.basic-sql-operations-of-mysql-mode.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql.md/2.basic-sql-operations-of-mysql-mode.md
@@ -13,7 +13,7 @@ obclient> CREATE DATABASE db1 DEFAULT CHARACTER SET UTF8 READ WRITE;
 Query OK, 1 row affected
 ```
 
-更多 `CREATE DATABASE` 语句相关的语法说明，请参见 [CREATE DATABASE](../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/11.create-database-of-mysql-mode.md) 章节。
+更多 `CREATE DATABASE` 语句相关的语法说明，请参见 [CREATE DATABASE](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/11.create-database-of-mysql-mode.md) 章节。
 
 创建完成后，可以通过 `SHOW DATABASES` 命令查看当前数据库服务器中所有的数据库。
 
@@ -47,7 +47,7 @@ obclient> CREATE TABLE test (c1 INT PRIMARY KEY, c2 VARCHAR(3));
 Query OK, 0 rows affected
 ```
 
-更多 `CREATE TABLE` 语句相关的语法说明，请参见 [CREATE TABLE](../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.create-table-of-mysql-mode.md) 章节。
+更多 `CREATE TABLE` 语句相关的语法说明，请参见 [CREATE TABLE](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.create-table-of-mysql-mode.md) 章节。
 
 ### 查看表
 
@@ -150,7 +150,7 @@ Query OK, 0 rows affected
   2 rows in set
   ```
 
-更多 `ALTER TABLE` 语句相关的语法说明，请参见 [ALTER TABLE](../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md) 章节。
+更多 `ALTER TABLE` 语句相关的语法说明，请参见 [ALTER TABLE](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md) 章节。
 
 ### 删除表
 
@@ -163,7 +163,7 @@ obclient> DROP TABLE test;
 Query OK, 0 rows affected
 ```
 
-更多 `DROP TABLE` 语句相关的语法说明,请参见 [DROP TABLE](../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.drop-table-of-mysql-mode.md) 章节。
+更多 `DROP TABLE` 语句相关的语法说明,请参见 [DROP TABLE](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.drop-table-of-mysql-mode.md) 章节。
 
 ## 索引操作
 
@@ -189,7 +189,7 @@ obclient> CREATE INDEX test_index ON test (c1, c2);
 Query OK, 0 rows affected
 ```
 
-更多 `CREATE INDEX` 语句相关的语法说明，请参见 [CREATE INDEX](../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 章节。
+更多 `CREATE INDEX` 语句相关的语法说明，请参见 [CREATE INDEX](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 章节。
 
 ### 查看索引
 
@@ -258,7 +258,7 @@ obclient> DROP INDEX test_index ON test;
 Query OK, 0 rows affected
 ```
 
-更多 `DROP INDEX` 语句相关的语法说明，请参见 [DROP INDEX](../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/24.drop-index-of-mysql-mode.md) 章节。
+更多 `DROP INDEX` 语句相关的语法说明，请参见 [DROP INDEX](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/24.drop-index-of-mysql-mode.md) 章节。
 
 ## 插入数据
 
@@ -306,7 +306,7 @@ Query OK, 0 rows affected
   4 rows in set
   ```
 
-更多 `INSERT` 语句相关的语法，请参见 [INSERT](../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/37.insert-of-mysql-mode.md) 章节。
+更多 `INSERT` 语句相关的语法，请参见 [INSERT](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/37.insert-of-mysql-mode.md) 章节。
 
 ## 删除数据
 
@@ -446,7 +446,7 @@ Query OK, 0 rows affected
   Empty set
   ```
 
-更多 `DELETE` 语句相关的语法说明，请参见 [DELETE](../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.delete-of-mysql-mode.md) 章节。
+更多 `DELETE` 语句相关的语法说明，请参见 [DELETE](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.delete-of-mysql-mode.md) 章节。
 
 ## 更新数据
 
@@ -454,7 +454,7 @@ Query OK, 0 rows affected
 
 示例：
 
-* 通过 `CREATE TABLE` 创建表 `t4` 和 `t5`，将表 `t4` 中 `t2.c1=10` 对应的那一行数据的 `c2` 列值修改为 `100`。
+* 通过 `CREATE TABLE` 创建表 `t4` 和 `t5`，将表 `t4` 中 `t4.c1=10` 对应的那一行数据的 `c2` 列值修改为 `100`。
 
   ```sql
   obclient> CREATE TABLE t4(c1 INT PRIMARY KEY, c2 INT);
@@ -584,7 +584,7 @@ Query OK, 0 rows affected
   4 rows in set
   ```
 
-更多 `UPDATE` 语句相关的语法，请参见 [UPDATE](../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.update-of-mysql-mode.md) 章节。
+更多 `UPDATE` 语句相关的语法，请参见 [UPDATE](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.update-of-mysql-mode.md) 章节。
 
 ## 查询数据
 
@@ -649,7 +649,7 @@ Query OK, 0 rows affected
   2 rows in set
   ```
 
-更多 `SELECT` 语句相关的语法说明，请参见 [SELECT](../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/51.select-of-mysql-mode/1.select-of-mysql-mode.md) 章节。
+更多 `SELECT` 语句相关的语法说明，请参见 [SELECT](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/51.select-of-mysql-mode/1.select-of-mysql-mode.md) 章节。
 
 ## 提交事务
 
