--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md
@@ -59,9 +59,9 @@
 
 如果需要索引列上不存在重复的值，可以创建唯一索引。
 
-您可以使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句，再参考以下的要求为已存在的表创建唯一索引。
+您可以使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句，再参考以下的要求为已存在的表创建唯一索引。
 
-也可以使用 [ALTER TABLE](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md) 语句在修改表时，参考以下要求为已存在的表添加唯一索引。该语句可以一次添加多个索引，索引关键字用 `INDEX` 或 `KEY` 都可以。
+也可以使用 [ALTER TABLE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md) 语句在修改表时，参考以下要求为已存在的表添加唯一索引。该语句可以一次添加多个索引，索引关键字用 `INDEX` 或 `KEY` 都可以。
 
 以下是创建唯一索引需要遵循的要求：
 
@@ -95,9 +95,9 @@
 
 ## 创建非唯一索引
 
-您可以使用 [CREATE INDEX](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句，再参考以下的要求为表创建非唯一索引。
+您可以使用 [CREATE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句，再参考以下的要求为表创建非唯一索引。
 
-也可以使用 [ALTER TABLE](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md) 语句在修改表时，再参考以下要求为已存在的表添加非唯一索引。该语句可以一次增加多个索引，索引关键字用 `INDEX` 或 `KEY` 都可以。
+也可以使用 [ALTER TABLE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md) 语句在修改表时，再参考以下要求为已存在的表添加非唯一索引。该语句可以一次增加多个索引，索引关键字用 `INDEX` 或 `KEY` 都可以。
 
 以下是创建非唯一索引需要遵循的要求：
 
@@ -131,9 +131,9 @@
 
 局部索引又名分区索引，创建局部索引的关键字是 `LOCAL`。局部索引的分区键等同于表的分区键，局部索引的分区数等同于表的分区数，所以局部索引的分区机制和表的分区机制一样。支持创建局部索引和局部唯一索引。如果要使用局部唯一索引去对数据的唯一性做约束，那么局部唯一索引中必须包含表分区键。
 
-请使用 [CREATE INDEX](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句结合 `LOCAL` 关键字，再参考以下要求为已存在的表创建局部索引。
+请使用 [CREATE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句结合 `LOCAL` 关键字，再参考以下要求为已存在的表创建局部索引。
 
-请使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句结合 `LOCAL` 关键字，再参考以下要求为已存在的表创建局部唯一索引。
+请使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句结合 `LOCAL` 关键字，再参考以下要求为已存在的表创建局部唯一索引。
 
 以下是创建局部索引需要遵循的要求：
 
@@ -181,9 +181,9 @@
 
 创建全局索引的关键字是 `GLOBAL`。
 
-请使用 [CREATE INDEX](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句结合 `GLOBAL` 关键字，再参考以下要求为已存在的表创建全局索引。
+请使用 [CREATE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句结合 `GLOBAL` 关键字，再参考以下要求为已存在的表创建全局索引。
 
-请使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句结合 `GLOBAL` 关键字，再参考以下要求为已存在的表创建全局唯一索引。
+请使用 [CREATE UNIQUE INDEX](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 语句结合 `GLOBAL` 关键字，再参考以下要求为已存在的表创建全局唯一索引。
 
 以下是创建全局索引需要遵循的要求：
 
