--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md
@@ -66,7 +66,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
      * `DEFAULT` 表示使用 `DEFAULT` Profile 的限制。
 
-   更多 `CREATE PROFILE` 语句的详细信息，请参见 [CREATE PROFILE](../../../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/19.create-profile-of-oracle-mode.md)。
+   更多 `CREATE PROFILE` 语句的详细信息，请参见 [CREATE PROFILE](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/19.create-profile-of-oracle-mode.md)。
 
 2. 应用 Profile 至用户。
 
@@ -83,7 +83,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
      如果在创建用户时未指定 Profile，则默认使用 `DEFAULT` Profile。`DEFAULT` Profile 的配置可以通过系统视图 `DBA_PROFILES` 查看。
 
-     更多 `CREATE USER` 语句的详细信息，请参见 [CREATE USER](../../../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md) **。**
+     更多 `CREATE USER` 语句的详细信息，请参见 [CREATE USER](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md) **。**
 
    * 如果用户已创建，则可以通过修改用户的 Profile 文件将已创建的 Profile 文件应用至用户。
 
@@ -93,7 +93,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
      obclient> ALTER USER user_name PROFILE {"profile_name" | default};
      ```
 
-     更多 `ALTER USER` 语句的详细信息，请参见 [ALTER USER](../../../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/12.alter-user-of-oracle-mode.md) 。
+     更多 `ALTER USER` 语句的详细信息，请参见 [ALTER USER](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/12.alter-user-of-oracle-mode.md) 。
 
 ## 操作示例
 
