--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md
@@ -171,7 +171,7 @@ system_privilege:
   obclient> GRANT SELECT, UPDATE ON emp_view TO test;
   ```
 
-`GRANT` 语句的更多信息，请参见 [GRANT](../../../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/7.grant-of-oracle-mode.md)。
+`GRANT` 语句的更多信息，请参见 [GRANT](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/7.grant-of-oracle-mode.md)。
 
 ## 通过 SQL 语句撤销权限
 
@@ -342,4 +342,4 @@ system_privilege:
   obclient> REVOKE ALL PRIVILEGES FROM user_name;
   ```
 
-`REVOKE` 语句的更多信息，请参见 [REVOKE](../../../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/9.revoke-of-oracle-mode.md)。
+`REVOKE` 语句的更多信息，请参见 [REVOKE](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/9.revoke-of-oracle-mode.md)。
