--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/8.revoke-role-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/8.revoke-role-of-oracle-mode.md
@@ -40,4 +40,4 @@
 obclient>  REVOKE role1 FROM test;
 ```
 
-更多 `REVOKE` 语句的说明信息，请参见 [REVOKE](../../../../../../4.development-reference1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/9.revoke-of-oracle-mode.md)。
+更多 `REVOKE` 语句的说明信息，请参见 [REVOKE](../../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/9.revoke-of-oracle-mode.md)。
