--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/5.related-terms.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/5.related-terms.md
@@ -22,7 +22,7 @@
 
 **联接顺序**
 
-多表联接时各表之间的联接顺序，目前 OceanBase 数据库仅支持左深树的联接顺序。具体参见 [联接顺序](4.sql-optimization-1/6.query-optimization/2.join-algorithm/3.join-order.md)。
+多表联接时各表之间的联接顺序，目前 OceanBase 数据库仅支持左深树的联接顺序。具体参见 [联接顺序](4.sql-optimization/6.query-optimization/2.join-algorithm/3.join-order.md)。
 
 **联接算法**
 
@@ -34,7 +34,7 @@
 
 **执行计划绑定**
 
-用户通过给定 Outline 来指定某条 SQL 的执行计划的过程，具体参见 [计划绑定](4.sql-optimization-1/7.manage-execution-plans/2.plan-binding.md)。
+用户通过给定 Outline 来指定某条 SQL 的执行计划的过程，具体参见 [计划绑定](4.sql-optimization/7.manage-execution-plans/2.plan-binding.md)。
 
 **SQL Plan Management(** **SPM)**
 
