--- a/zh-CN/7.reference/1.oceanbase-database-concepts/8.transaction-management/1.transaction/5.transaction-control/1.transaction-control-overview.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/8.transaction-management/1.transaction/5.transaction-control/1.transaction-control-overview.md
@@ -2,7 +2,7 @@
 
 事务的整个生命周期通常包括开启事务、执行查询和 DML 语句，结束事务等过程。其中，开启事务可以通过 BEGIN、START TRANSACTION 等语句显式开启，也可以通过 DML 语句隐式开启。结束事务通常有两种方式，通过 COMMIT 语句提交事务或者通过 ROLLBACK 语句回滚事务。此外，在一个活跃事务中执行 DDL 语句也会导致隐式地提交事务。
 
-在事务内部可以创建 Savepoint，它标记了事务内部的一个点，您可以在事务后续的执行过程中通过 `ROLLBACK TO SAVEPOINT` 语句回滚到该点。更多 Savepoint 相关信息请参见 [Savepoint](../5.transaction-control/3.Savepoint-1-2.md)。
+在事务内部可以创建 Savepoint，它标记了事务内部的一个点，您可以在事务后续的执行过程中通过 `ROLLBACK TO SAVEPOINT` 语句回滚到该点。更多 Savepoint 相关信息请参见 [Savepoint](../5.transaction-control/3.savepoint.md)。
 
 ## 事务大小
 
