--- a/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/3.merge.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/3.merge.md
@@ -81,4 +81,4 @@
 
 ## 相关文档
 
-更多合并操作，请参见 [合并](../../../3.user-guide/6.basic-database-management/5.manage-data-storage/2.merge-management-1/1.consolidation-management-overview-1.md)。
+更多合并操作，请参见 [合并](../../../2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/1.consolidation-management-overview.md)。
