--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/4.column-operations-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/4.column-operations-of-mysql-mode.md
@@ -176,7 +176,7 @@ OceanBase 数据库所支持的列类型的相关转换如下：
 * 带精度的数据类型之间的转换，包括 `FLOAT`、`DOUBLE` 和 `DECIMAL`。
 * 不同数据类型之间的转换，包括 `INT`、`VARCHAR`、`DOUBLE`、`FLOAT` 和 `DECIMAL`。
 
-OceanBase 数据库相关的列类型变更规则，请参考 [列类型变更规则](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/7.ddl-function-of-mysql-mode/8.partitioning-operations-of-mysql-mode.md)。
+OceanBase 数据库相关的列类型变更规则，请参考 [列类型变更规则](9.column-type-change-rule-of-mysql-mode.md)。
 
 修改列类型的语法如下：
 
