--- a/zh-CN/7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/2.table-of-oracle-mode/2.data-type-of-oracle-mode/7.format-model-of-oracle-mode/1.format-model-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/4.database-objects/1.database-objects-of-oracle-mode/2.table-of-oracle-mode/2.data-type-of-oracle-mode/7.format-model-of-oracle-mode/1.format-model-overview-of-oracle-mode.md
@@ -12,9 +12,9 @@
 
 OceanBase 数据库支持以下两种数据格式模型：
 
-* [数字格式模型](../7.format-model/2.digital-format-model.md)
+* [数字格式模型](../7.format-model-of-oracle-mode/2.digital-format-model-of-oracle-mode.md)
 
-* [日期时间格式模型](../7.format-model/3.the-date-and-time-format-model.md)
+* [日期时间格式模型](../7.format-model-of-oracle-mode/2.digital-format-model-of-oracle-mode.md)
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
