--- a/zh-CN/6.manage/5.security-permissions/3..access-control/1.access-control-oracle-mode/5.permission-check-of-oracle.md
+++ b/zh-CN/6.manage/5.security-permissions/3..access-control/1.access-control-oracle-mode/5.permission-check-of-oracle.md
@@ -1,18 +1,10 @@
-# 权限分类
+# 权限检查
 
-本文主要介绍 OceanBase 数据库 Oracle 模式下的权限分类。
+本文主要介绍如何通过视图进行权限检查
 
-## 分类
+## 背景信息
 
-Oracle 模式的权限分为两类：
-
-* 对象权限：对特定对象的操作权限，例如：某个表对象的 Alter、Select、Update 等权限。
-* 系统权限：允许用户执行在一个 Schema 或者任何 Schema 上进行特定的数据库操作的权限。
-
-  <main id="notice" type='explain'>
-              <h4>说明</h4>
-              <p>系统权限提供的权限比对象权限大得多。</p>
-            </main>
+在 Resolver 阶段，解析出一条 SQL 语句中所需的所有权限，逐个检查用户是否拥有对应的权限。对于系统操作的权限，如果权限不足则直接报错权限不足。对于访问对象的权限，如果用户在这个对象上没有任何权限，则报错对象不存在；如果用户在这个对象上有其他权限，只是没有需要的权限，则报错权限不足。
 
 ## 通过 SQL 语句查看用户权限
 
