--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/114.internal_sql_execute_timeout.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/114.internal_sql_execute_timeout.md
@@ -1,7 +1,7 @@
 internal_sql_execute_timeout 
 =================================================
 
-internal_sql_execute_timeout 用于设置系统内部 DML 请求的时间间隔。
+internal_sql_execute_timeout 用于设置系统内部 SQL 请求的时间间隔。
 
 
 |      **属性**      |      **描述**       |
