根据评审意见修改

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -9,6 +9,8 @@
 
 ## 操作步骤
 
+重启节点的主要流程为：停止服务 -> 转储 -> 关闭进程 -> 启动进程 -> 启动服务。
+
 本文以重启集群中的一个节点为例提供操作指导，如果需要重启多个节点，请参考本操作执行多次即可。
 
 1. 使用 `root` 用户登录到数据库的 `sys` 租户。
@@ -16,7 +18,7 @@
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
-   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+  obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
@@ -29,9 +31,9 @@
 
    相关参数说明如下：
 
-   * `svr_ip`：表示待停止的节点所在的主机 IP。
+   * `svr_ip`：表示待停止的节点所在的 IP。
 
-   * `svr_port`：表示待停止的节点主机的 RPC 端口。
+   * `svr_port`：表示待停止的节点的 RPC 端口。
 
    示例如下：
 
@@ -51,9 +53,9 @@
 
    相关参数说明如下：
 
-   * `svr_ip`：表示待重启的节点所在的主机 IP。
+   * `svr_ip`：表示待重启的节点的 IP。
 
-   * `svr_port`：表示待重启的节点主机的 RPC 端口。
+   * `svr_port`：表示待重启的节点的 RPC 端口。
 
    示例如下：
 
@@ -68,13 +70,13 @@
    2. 通过命令行工具进入 `/home/admin/oceanbase/bin` 目录。
 
        ```bash
-       [admin@xxx oceanbase]$ cd /home/admin/oceanbase/bin
+       cd /home/admin/oceanbase/bin
        ```
 
    3. 执行以下命令，查看并获取节点的进程 ID。
 
       ```bash
-      [admin@xxx oceanbase]$ ps -ef | grep observer | grep -v grep
+      ps -ef | grep observer | grep -v grep
       admin    103364      1 99  2022 ?        51-17:24:41 /home/admin/oceanbase/bin/observer
       ```
 
@@ -85,7 +87,7 @@
       命令如下：
 
       ```bash
-      [admin@xxx oceanbase]$ kill -9 pid
+      kill -9 pid
       ```
 
       其中，`pid` 为待停止的节点的 observer 进程 ID。
@@ -93,13 +95,13 @@
       示例如下：
 
       ```bash
-      [admin@xxx oceanbase]$ kill -9 103364
+      kill -9 103364
       ```
 
    5. 执行以下命令，确认进程是否已停止。
 
        ```bash
-       [admin@xxx oceanbase]$ ps aux | grep observer
+       ps aux | grep observer
        ```
 
        如果命令执行后没有返回信息，则表示进程停止成功。
@@ -113,7 +115,7 @@
    2. 启动 observer 进程。
 
       ```bash
-      [admin@xxx ]$ cd /home/admin/oceanbase  &&  ./bin/observer
+      cd /home/admin/oceanbase  &&  ./bin/observer
       ```
 
 7. 执行以下命令，启动节点服务。
@@ -124,9 +126,9 @@
 
    其中：
 
-   * `svr_ip`：表示待停止的节点所在的主机 IP。
+   * `svr_ip`：表示待停止的节点的 IP。
 
-   * `svr_port`：表示待停止的节点主机的 RPC 端口。
+   * `svr_port`：表示待停止的节点的 RPC 端口。
 
    示例如下：
 
