--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -19,7 +19,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
-   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+   obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
@@ -68,7 +68,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
        * `unit_id`：表示待迁移的 Unit 的 ID。
 
-       * `svr_ip`：指定 Unit 迁移后的节点所在的主机 IP。
+       * `svr_ip`：指定 Unit 迁移后的节点的 IP。
 
        * `svr_port`：指定 Unit 迁移后的节点的 RPC 端口。
 
@@ -78,7 +78,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
       obclient [none]> ALTER SYSTEM MIGRATE UNIT = 1012 DESTINATION = 'xx.xx.xx.218:2882'; 
       ```
 
-3. 执行以下命令，删除 OBServer。
+3. 执行以下命令，删除节点。
 
    语句如下：
 
@@ -88,7 +88,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
    相关参数说明如下：
 
-   * `svr_ip`：表示待删除的节点所在的主机 IP。
+   * `svr_ip`：表示待删除的节点的 IP。
 
    * `svr_port`：表示待删除的节点的 RPC 端口。
 
@@ -106,7 +106,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    obclient [none]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
    ```
 
-   如果列表中已经查询不到该 OBServer，则表示删除成功。如果列表中仍然有该节点，且该节点的状态为 `DELETING`，则表示该节点仍然在删除状态中。
+   如果列表中已经查询不到该节点，则表示删除成功。如果列表中仍然有该节点，且该节点的状态为 `DELETING`，则表示该节点仍然在删除状态中。
 
 ## 后续操作
 
@@ -119,10 +119,10 @@ Cancel Delete Server 的具体操作如下：
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```bash
-   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+   obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-2. 执行以下语句，取消删除 OBServer。
+2. 执行以下语句，取消删除节点。
 
    语句如下：
 
@@ -132,7 +132,7 @@ Cancel Delete Server 的具体操作如下：
 
    相关参数说明如下：
 
-   * `svr_ip`：表示待取消删除的节点所在的主机 IP。
+   * `svr_ip`：表示待取消删除的节点的 IP。
 
    * `svr_port`：表示待取消删除的节点的 RPC 端口。
 
