--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -43,7 +43,7 @@
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
-   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+   obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
    
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
@@ -113,13 +113,13 @@
    2. 通过命令行工具进入 `/home/admin/oceanbase/bin` 目录。
 
        ```bash
-       [admin@xxx /]$ cd /home/admin/oceanbase/bin
+       cd /home/admin/oceanbase/bin
        ```
 
    3. 执行以下命令，查看并获取节点的进程 ID。
 
       ```bash
-      [admin@xxx bin]$ ps -ef | grep observer | grep -v grep
+      ps -ef | grep observer | grep -v grep
       admin    103364      1 99  2022 ?        51-17:51:06 /home/admin/oceanbase/bin/observer
       ```
 
@@ -128,7 +128,7 @@
       命令如下：
 
       ```bash
-      [admin@xxx oceanbase]$ kill -9 pid
+      kill -9 pid
       ```
 
       其中，`pid` 为待停止的节点的 observer 进程 ID。
@@ -136,7 +136,7 @@
       示例如下：
 
       ```bash
-      [admin@xxx oceanbase]$ kill -9 103364
+      kill -9 103364
       ```
 
 ## 相关文档
