--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/7.replace-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/7.replace-a-node.md
@@ -9,7 +9,7 @@
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
-   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+   obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
@@ -49,7 +49,7 @@
       obclient [none]> SELECT  unit_id FROM  oceanbase.DBA_OB_UNITS WHERE SVR_IP = 'svr_ip';
       ```
 
-      其中，`svr_ip` 需要根据实际情况填写待替换节点所在主机的 IP 地址。
+      其中，`svr_ip` 需要根据实际情况填写待替换节点的 IP 地址。
 
       查询示例如下：
 
@@ -78,7 +78,7 @@
 
       * `unit_id`：待迁移的 Unit 的 Unit_id。
 
-      * `svr_ip:svr_port`：新节点所在主机的 IP 地址和端口号。
+      * `svr_ip:svr_port`：新节点的 IP 地址和端口号。
 
       每条命令仅支持迁移一个 Unit，多个 Unit 需要执行多次该命令。
 
@@ -117,7 +117,7 @@
 
       相关参数说明如下：
 
-      * `svr_ip`：表示待删除的旧节点所在的主机 IP。
+      * `svr_ip`：表示待删除的旧节点的 IP。
 
       * `port`：表示待删除的旧节点的 RPC 端口。
 
