--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.add-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/8.add-a-zone.md
@@ -9,7 +9,7 @@
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
-   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+   obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
@@ -28,7 +28,7 @@
 
    * `idc_name`：指定 Zone 所在机房的名称。如果不指定，默认为空。
   
-   * `region_name`：指定 Zone 所在 Region 的名称，如果不指定，默认为 `default_region`。
+   * `region_name`：指定 Zone 所在 Region 的名称，如果不指定，默认值为 `default_region`。
 
    * `ZONE_TYPE`：指定 Zone 的类型，当前版本仅支持读写 Zone（READWRITE）。如果不指定，默认为读写 Zone。
 
