--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.delete-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.delete-a-zone.md
@@ -13,7 +13,7 @@
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
-   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+   obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
