--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
@@ -21,13 +21,13 @@
 2. 通过命令行工具进入 `/home/admin/oceanbase/etc` 目录。
 
    ```bash
-   [admin@xxx /]$ cd /home/admin/oceanbase/etc
+   cd /home/admin/oceanbase/etc
    ```
 
 3. 执行以下命令，查看文件中的内容。
 
    ```bash
-   [admin@xxx etc]$ strings observer.config.bin
+   strings observer.config.bin
    ```
 
 ## 通过 SHOW 语句查看集群配置项
@@ -39,7 +39,7 @@
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
-   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -utest@mysql -p***** -A
+   obclient -h10.xx.xx.xx -P2883 -utest@mysql -p***** -A
    ```
 
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
@@ -90,7 +90,7 @@
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
-   [admin@xxx oceanbase]$ obclient -h10.xx.xx.xx -P2883 -utest@mysql -p***** -A
+   obclient -h10.xx.xx.xx -P2883 -utest@mysql -p***** -A
    ```
 
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
